# gnupg-windows

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  unistd.h.in
cmake-modules/: CheckEndianess.cmake  LargeFiles.cmake  SignalHandler.cmake  TimeWithSysTime.cmake  UtilityFunctions.cmake  alloca.cmake  fork.cmake  inline.cmake  mlock.cmake  restrict.cmake  visibility.cmake
msvc/: code-msvc-cant-compile.c
